--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
     "next": "15.5.7",
     "react": "18.3.1",
     "react-dom": "18.3.1"
+  },
+  "devDependencies": {
+    "typescript": "^5.6.3",
+    "@types/react": "^18.3.5",
+    "@types/node": "^20.14.9"
   }
 }
